Fix filter overlapping bug (removes title moving animation)

--- a/src/App.css
+++ b/src/App.css
@@ -46,16 +46,12 @@
 @keyframes moveTitle {
   0% {
     opacity: 0;
-    height: 100%;
   }
   50% {
     opacity: 1;
-    margin-top: 65px;
-    height: 100%;
   }
   100% {
-    height: 8rem;
-    margin-top: 10px;
+    transform: translateY(0);
   }
 }
 
